--- a/Cubix/MainWindow.xaml
+++ b/Cubix/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="RC.Crawler.MainWindow"
+﻿<Window x:Class="Cubix.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RC.Crawler"
+        xmlns:local="clr-namespace:Cubix"
         mc:Ignorable="d"
         WindowStyle="None"
         FontFamily="Roboto"
@@ -15,7 +15,7 @@
         TextOptions.TextRenderingMode="Auto"
         WindowStartupLocation="CenterScreen"
         AllowsTransparency="True"
-        Title="RC.Crawler" 
+        Title="Cubix" 
         Height="75" 
         Width="450"
         MouseLeftButtonDown="Drag">
@@ -33,7 +33,7 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#121212" Opacity="0.6"/>
         
-        <Label Content="RC.Crawler" Grid.Row="0" Foreground="#DDBDBDBD"/>
+        <Label Content="Cubix" Grid.Row="0" Foreground="#DDBDBDBD"/>
         
         <Label Name="ExitApp" Grid.Row="0" Content="{materialDesign:PackIcon Kind=Close}" HorizontalAlignment="Right" 
                VerticalAlignment="Top" Foreground="#DDBDBDBD" MouseLeftButtonDown="ExitApplication" MouseEnter="ExitAppMouseEnter" 
@@ -47,11 +47,11 @@
                ToolTip="Minimize" Height="24" Width="24"/>
 
         <TextBox Name="Search" Text="" materialDesign:HintAssist.Hint="supported: cyberdrop, imgur, 4chan" Grid.Row="1" Foreground="#DDBDBDBD" Padding="5" 
-                 FontSize="15" VerticalContentAlignment="Center" BorderBrush="#DDBDBDBD" HorizontalAlignment="Left" Width="450"/>
+                 FontSize="15" VerticalContentAlignment="Center" BorderBrush="#DDBDBDBD" HorizontalAlignment="Left" Width="450" TextChanged="Search_TextChanged"/>
         
         <Button Name="DownloadButton" Content="{materialDesign:PackIcon Kind=Download, Size=25}" Grid.Row="1" HorizontalAlignment="Right" 
                 VerticalAlignment="Top" Foreground="#DDBDBDBD" Background="Transparent" BorderThickness="0" Height="42" Click="Download" IsDefault="True"
-                MouseEnter="DownloadMouseEnter" MouseLeave="DownloadMouseLeave" Style="{StaticResource MaterialDesignFlatAccentBgButton}"/>
+                MouseEnter="DownloadMouseEnter" MouseLeave="DownloadMouseLeave" Style="{StaticResource MaterialDesignFlatAccentBgButton}" IsEnabled="False"/>
         
         <ProgressBar Name="DownloadProgress" Grid.Row="2" Value="100" Maximum="100" Background="Transparent" Foreground="#DDBDBDBD" BorderThickness="0" 
                      VerticalAlignment="Bottom" materialDesign:TransitionAssist.DisableTransitions="True" Visibility="Hidden"/>
