--- a/crawler/App.xaml
+++ b/crawler/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="RC.Crawler.App"
+﻿<Application x:Class="Crawler.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RC.Crawler"
+             xmlns:local="clr-namespace:Crawler"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
