--- a/crawler/MainWindow.xaml
+++ b/crawler/MainWindow.xaml
@@ -32,7 +32,7 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#121212" Opacity="0.6"/>
-        
+
         <Label Content="Crawler" Grid.Row="0" Foreground="#DDBDBDBD"/>
         
         <Label Name="ExitApp" Grid.Row="0" Content="{materialDesign:PackIcon Kind=Close}" HorizontalAlignment="Right" 
@@ -46,7 +46,7 @@
                VerticalAlignment="Top" Margin="0,0,40,0" Foreground="#DDBDBDBD" MouseLeftButtonDown="MinimizeApplication" Cursor="Hand"
                ToolTip="Minimize" Height="24" Width="24"/>
 
-        <TextBox Name="Search" Text="" materialDesign:HintAssist.Hint="supported: cyberdrop, imgur, 4chan" Grid.Row="1" Foreground="#DDBDBDBD" Padding="5" 
+        <TextBox Name="Search" Text="" materialDesign:HintAssist.Hint="cyberdrop, imgur, 4chan" Grid.Row="1" Foreground="#DDBDBDBD" Padding="5" 
                  FontSize="15" VerticalContentAlignment="Center" BorderBrush="#DDBDBDBD" HorizontalAlignment="Left" Width="450" TextChanged="Search_TextChanged"/>
         
         <Button Name="DownloadButton" Content="{materialDesign:PackIcon Kind=Download, Size=25}" Grid.Row="1" HorizontalAlignment="Right" 
